Upgrade sshd dependencies. Explicitly don't use user ssh config file during tests otherwise they can fail